# Sample-Model-Context-Protocol-Demos

./: .gitignore  README.md
modules/anthropic-bedrock-python-ecs-mcp/: README.md  pyproject.toml  requirements.txt
modules/anthropic-bedrock-python-ecs-mcp/docker/: client  server
modules/anthropic-bedrock-python-ecs-mcp/infra/mcp-sse-cdk/: app.py
modules/anthropic-bedrock-python-ecs-mcp/infra/mcp-sse-cdk/mcp_sse_cdk/: mcp_sse_cdk_stack.py
modules/anthropic-bedrock-python-ecs-mcp/infra/mcp-sse-cdk/tests/unit/: test_mcp_sse_cdk_stack.py
modules/anthropic-bedrock-python-ecs-mcp/src/: client-requirements.txt  client.py  server-requirements.txt  server.py
modules/converse-client-server-sse-demo-docker/: .gitignore  README.md  docker-compose.yml
modules/converse-client-server-stdio-demo-local/: .gitignore  README.md  app.py  converse_agent.py  converse_tools.py  mcp_client.py  mcp_server.py  requirements.txt
modules/effect-agent-ecs/: .gitignore  client.http  infra.cfn  package-lock.json  package.json  package.json-
modules/embabel-agent-ecs/: ARCHITECTURE.md  INFRA_ARCHITECTURE.md  README.md  aws-checks.sh  build-agent.sh  client.http  fix-aws-deploy.md  infra.cfn  pom.xml  run-client.sh  setup-ecr.sh
modules/java-mcp-bedrock-agent/: README.md  pom.xml
modules/spring-ai-agent-ecs/: FIXES.md  README.md  aws-checks.sh  build-agent.sh  infra.cfn  pom.xml  setup-ecr.sh
modules/spring-ai-java-bedrock-mcp-rag/: README.md
modules/spring-ai-mcp-inter-agent-ecs/: README.md  client.http  infra.cfn  pom.xml
modules/spring-ai-mcp-server-ecs/: README.md  pom.xml
(+105 files in other folders)
